--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "foundry-module-ts",
-  "version": "1.0.0",
-  "description": "A template project for FoundryVTT modules using Typescript",
+  "name": "foundryvtt-narrative-ui",
+  "version": "0.1.0",
+  "description": "A FoundryVTT module wich modifies the UI to be more narrative focused.",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "tsc && vite build",
     "watch": "tsc && vite build --watch"
   },
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "@reactivex/rxjs": "^6.6.7",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-watch-assets": "^1.0.1",
     "sass": "^1.54.8",
     "typescript": "^4.8.2",
     "vite": "^3.2.7"
+  },
+  "dependencies": {
+    "rxjs": "^7.8.1"
   }
 }
